--- a/pfolio/package.json
+++ b/pfolio/package.json
@@ -2,23 +2,31 @@
   "name": "pfolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@react-aria/ssr": "^3.9.3",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
-    "react-github-calendar": "^3.4.0",
-    "react-icons": "^4.7.1",
-    "react-parallax-tilt": "^1.7.75",
-    "react-pdf": "^6.2.0",
-    "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.6.0",
-    "typewriter-effect": "^2.19.0",
-    "web-vitals": "^2.1.4"
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.1.3",
+    "cra-template": "1.2.0",
+    "express": "^4.18.1",
+    "pdfjs-dist": "^2.14.305",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
+    "react-github-calendar": "^3.2.2",
+    "react-icons": "^4.3.1",
+    "react-parallax-tilt": "^1.6.5",
+    "react-pdf": "^5.7.1",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^3.0.1",
+    "react-tsparticles": "^1.42.2",
+    "typewriter-effect": "^2.18.2",
+    "web-vitals": "^2.1.4",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "source-map-loader": "^5.0.0"
   }
 }
